paths for candidate pictures, styling for about page

--- a/child_pages/about.html
+++ b/child_pages/about.html
@@ -7,6 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora&family=REM:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,600;1,700&family=Roboto+Mono&display=swap" rel="stylesheet">
     <title>Inform The Vote</title>
 </head>
 <body>
@@ -24,8 +27,10 @@
 
     <div id="jumbotronjawn"></div>
 
-    <h1 class="about-itv">About Inform The Vote</h1>
-    <div class="about-content">
+    
+    <div class="container">
+    <h1 class="about-h1">About Inform The Vote</h1>   
+    <div class="main-content-with-box-shadow-about">
         <div class="our-mission">
             <h2 class="our-mission-heading">Our Mission</h2>
             <div class="our-mission-content">
@@ -46,35 +51,35 @@
                 <ol class="ideal-system">
                     <li class="ideal-system-li">Provide Timely and Accessible Information:</li>
                         <ul class="ideal-system-bullet-box">
-                            <li class="bullet">Information should be disseminated at least one month before any election and updated
+                            <li class="bullet"> 1) Information should be disseminated at least one month before any election and updated
                                 monthly during campaign seasons to ensure voters have ample time to make well-
                                 informed decisions.</li>
-                            <li class="bullet">For instance, a link to a comprehensive site that consolidates all relevant voting
+                            <li class="bullet">2) For instance, a link to a comprehensive site that consolidates all relevant voting
                                 information should be provided with sample ballots that are mailed to voters.</li>
-                            <li class="bullet">Additionally, a link to the comprehensive site should be prominently displayed on a
+                            <li class="bullet">3) Additionally, a link to the comprehensive site should be prominently displayed on a
                                 reasonable array of marketing mediums, including not only traditional platforms but also
                                 modern ones such as social media channels.</li>
                         </ul>
                     <li class="ideal-system-li">Public Appearances Calendar:</li>
                         <ul class="ideal-system-bullet-box">
-                            <li class="bullet">A regularly updated calendar of all public appearances, forums, and debates where
+                            <li class="bullet">1) A regularly updated calendar of all public appearances, forums, and debates where
                                 candidates will be present.</li>
-                            <li class="bullet">Candidates are required to make at least one public appearance per month.</li>
-                            <li class="bullet">These events should be primarily focused on enabling candidates to speak at length with
+                            <li class="bullet">2) Candidates are required to make at least one public appearance per month.</li>
+                            <li class="bullet">3) These events should be primarily focused on enabling candidates to speak at length with
                                 curious citizens and provide them with meaningful information, as opposed to regular
                                 commissioner meetings or casual county events not primarily aimed at informing the
                                 electorate.</li>
                         </ul>
                     <li class="ideal-system-li">Meet a Minimum Standard for Candidate Information:</li>
                         <ul class="ideal-system-bullet-box">
-                            <li class="bullet">A detailed agenda outlining their goals and visions.</li>
-                            <li class="bullet">Policy proposals directly associated with achieving these goals.</li>
-                            <li class="bullet">Positions on recent or ongoing popular issues relevant to the office they seek.</li>
-                            <li class="bullet">Influence and stances on popular issues they could impact, even indirectly.</li>
-                            <li class="bullet">A comparison between their policy positions and those of their opponents.</li>
-                            <li class="bullet">A summary of their experience, highlighting relevant roles and noting indirect
+                            <li class="bullet">1) A detailed agenda outlining their goals and visions.</li>
+                            <li class="bullet">2) Policy proposals directly associated with achieving these goals.</li>
+                            <li class="bullet">3) Positions on recent or ongoing popular issues relevant to the office they seek.</li>
+                            <li class="bullet">4) Influence and stances on popular issues they could impact, even indirectly.</li>
+                            <li class="bullet">5) A comparison between their policy positions and those of their opponents.</li>
+                            <li class="bullet">6) A summary of their experience, highlighting relevant roles and noting indirect
                                 experience where applicable.</li>
-                            <li class="bullet">Relevant biographical information.</li>
+                            <li class="bullet">7) Relevant biographical information.</li>
                         </ul>
                     <li class="ideal-system-li">Accountability Measures:</li>
                         <div class="accountability">
@@ -196,5 +201,6 @@
             </div>
         </div>
     </div>
+</div>
 </body>
 </html>
