--- a/child_pages/cc-elections/Candidates/capizola.html
+++ b/child_pages/cc-elections/Candidates/capizola.html
@@ -36,7 +36,7 @@
         </div>
     </div>
     <div class="candidate-pic-box">
-        <img class="cover" src="/assets/candidates/capizola.jpg" class="candidate-pic">
+        <img class="cover" src="../../../assets/candidates/capizola.jpg" class="candidate-pic">
     </div>
     <div class="candidate-agenda">
         <h3 class="sub-heading">agenda</h3>
