--- a/child_pages/contact.html
+++ b/child_pages/contact.html
@@ -7,6 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora&family=REM:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,600;1,700&family=Roboto+Mono&display=swap" rel="stylesheet">
     <title>Inform The Vote</title>
 </head>
 <body>
@@ -23,5 +26,13 @@
     </nav>
 
     <div id="jumbotronjawn"></div>
+
+    <div class="contact">
+        <p>
+            For any and all inquiries, reach out to Inform The Vote by <a href="mailto:g@you.suck">email</a>.
+        </p>
+        
+    </div>
+
 </body>
 </html>
