--- a/child_pages/get-involved.html
+++ b/child_pages/get-involved.html
@@ -13,17 +13,26 @@
     <title>Inform The Vote</title>
 </head>
 <body>
-    <nav id="nav">
-        <header>Inform The Vote</header>
-        <ul>
-            <a href="../index.html"><li>Home</li></a>
-            <a href="cc_elections.html"><li>Cumberland County Elections</li></a>
-            <a href="get-involved.html"><li>Get Involved</li></a>
-            <a href="events.html"><li>Events</li></a>
-            <a href="about.html"><li>About</li></a>
-            <a href="contact.html"><li>Contact</li></a>
-        </ul>
-    </nav>
+    <div class="menu-wrap">
+        <input type="checkbox" class="toggler">
+        <div class="hamburger">
+            <div></div>
+        </div>
+        <div class="menu">
+            <div>
+                <div>
+                    <ul class="links">
+                        <li class="link"><a href="../index.html">Home</a></li>
+                        <li class="link"><a href="cc_elections.html">Cumberland County Elections</a></li>
+                        <li class="link"><a href="get-involved.html">Get Involved</a></li>
+                        <li class="link"><a href="events.html">Events</a></li>
+                        <li class="link"><a href="about.html">About</a></li>
+                        <li class="link"><a href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div id="jumbotronjawn"></div>
 
