--- a/child_pages/cc_elections.html
+++ b/child_pages/cc_elections.html
@@ -7,11 +7,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
+    <script src="../app.js" async></script>
     <title>Inform The Vote</title>
 </head>
 <body>
     <div class="menu-wrap">
-        <input type="checkbox" class="toggler">
+        <input type="checkbox" autocomplete='off' class="toggler">
         <div class="hamburger">
             <div></div>
         </div>
@@ -19,7 +20,7 @@
             <div>
                 <div>
                     <ul class="links">
-                        <li class="link"><a href="../index.html">Home</a></li>
+                        <li class="link"><a id="home" href="../index.html">Home</a></li>
                         <li class="link"><a href="cc_elections.html">Cumberland County Elections</a></li>
                         <li class="link"><a href="get-involved.html">Get Involved</a></li>
                         <li class="link"><a href="events.html">Events</a></li>
