--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora&family=REM:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,600;1,700&family=Roboto+Mono&display=swap" rel="stylesheet">
+    <script src="app.js" async></script>
     <title>Inform The Vote</title>
 </head>
 <body>
     <div class="menu-wrap">
-        <input type="checkbox" class="toggler">
+        <input type="checkbox" autocomplete='off' id="toggler" class="toggler">
         <div class="hamburger">
             <div></div>
         </div>
@@ -22,7 +23,7 @@
             <div>
                 <div>
                     <ul class="links">
-                        <li class="link"><a href="index.html">Home</a></li>
+                        <li class="link"><a id="home" href="index.html">Home</a></li>
                         <li class="link"><a href="child_pages/cc_elections.html">Cumberland County Elections</a></li>
                         <li class="link"><a href="child_pages/get-involved.html">Get Involved</a></li>
                         <li class="link"><a href="child_pages/events.html">Events</a></li>
