ballot box looks perfect on mobile

--- a/child_pages/cc-elections/cc_election_candidates.html
+++ b/child_pages/cc-elections/cc_election_candidates.html
@@ -91,7 +91,7 @@
                         </div>   
                     </div>
                     <div class="a-row-2">
-                        <div class="last-name">
+                        <div class="last-name  push-down-last-name">
                             <a href="Candidates/laspata.html">LASPATA</a>
                         </div>
                     </div>
@@ -167,7 +167,7 @@
                         </div>   
                     </div>
                     <div class="a-row-2">
-                        <div class="last-name">
+                        <div class="last-name push-down-last-name">
                             <a href="Candidates/bonner.html">BONNER</a>
                         </div>
                     </div>
@@ -210,7 +210,7 @@
                         </div>   
                     </div>
                     <div class="a-row-2">
-                        <div class="last-name">
+                        <div class="last-name push-down-last-name">
                             <a href="Candidates/austino.html">AUSTINO</a>
                         </div>
                     </div>
@@ -368,7 +368,7 @@
                         </div>   
                     </div>
                     <div class="a-row-2">
-                        <div class="last-name">
+                        <div class="last-name push-down-last-name-double">
                             <a href="Candidates/perella.html">PERELLA, Jr.</a>
                         </div>
                     </div>
@@ -435,7 +435,7 @@
                             </div>   
                         </div>
                         <div class="a-row-2">
-                            <div class="last-name">
+                            <div class="last-name push-down-last-name">
                                 <a href="Candidates/testa.html">TESTA, Jr.</a>
                             </div>
                         </div>
@@ -596,7 +596,7 @@
                             </div>   
                         </div>
                         <div class="a-row-2">
-                            <div id='luisi-last-name' class="last-name">
+                            <div id='luisi-last-name' class="last-name push-down-last-name">
                                 <a href="Candidates/luisi.html">LUISI</a>
                             </div>
                         </div>
@@ -637,7 +637,7 @@
                             </div>   
                         </div>
                         <div class="a-row-2">
-                            <div id='taylor-last-name' class="last-name">
+                            <div id='taylor-last-name' class="last-name push-down-last-name">
                                 <a class="long-name" id="capizola" href="Candidates/taylor.html">TAYLOR</a>
                             </div>
                         </div>
