add color to candidate names

--- a/child_pages/cc-elections/cc_election_candidates.html
+++ b/child_pages/cc-elections/cc_election_candidates.html
@@ -64,7 +64,7 @@
                     <p class="title-party-espanol">SELECCION PERSONAL</p>
                 </div>
             </div>
-            <div class="state-senator row">
+            <div class="row state-senator">
                 <div class="office-title">
                     <div class="ot-english">
                         <p>State Sentator</p>
