seeing where the image path breaks

--- a/child_pages/cc-elections/Candidates/white-morris.html
+++ b/child_pages/cc-elections/Candidates/white-morris.html
@@ -10,19 +10,28 @@
         <title>Inform The Vote</title>
     </head>
     <body>
-        <nav id="nav">
-            <header>Inform The Vote</header>
-            <ul>
-                <a href="../../../index.html"><li>Home</li></a>
-                <a href="../../../child_pages/cc_elections.html"><li>Cumberland County Elections</li></a>
-                <a href="../../../child_pages/get-involved.html"><li>Get Involved</li></a>
-                <a href="../../../child_pages/events.html"><li>Events</li></a>
-                <a href="../../../child_pages/about.html"><li>About</li></a>
-                <a href="../../../child_pages/contact.html"><li>Contact</li></a>
-            </ul>
-        </nav>
+        <div class="menu-wrap">
+            <input type="checkbox" autocomplete='off' class="toggler">
+            <div class="hamburger">
+                <div></div>
+            </div>
+            <div class="menu">
+                <div>
+                    <div>
+                        <ul class="links">
+                            <li class="link"><a href="../../../index.html">Home</a></li>
+                            <li class="link"><a href="../../../child_pages/cc_elections.html">Cumberland County Elections</a></li>
+                            <li class="link"><a href="../../../child_pages/get-involved.html">Get Involved</a></li>
+                            <li class="link"><a href="../../../child_pages/events.html">Events</a></li>
+                            <li class="link"><a href="../../../child_pages/about.html">About</a></li>
+                            <li class="link"><a href="../../../child_pages/contact.html">Contact</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     
-        <div id="jumbotronjawn"></div>
+        <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
 <div class="container">
     <div class="title-info">
        <h2>DAMITA WHITE-MORRIS</h2>
