--- a/child_pages/cc-elections/cc_election_candidates.html
+++ b/child_pages/cc-elections/cc_election_candidates.html
@@ -34,7 +34,7 @@
         </div>
     </div>
 
-    <div id="jumbotronjawn"></div>
+    <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
     <div id="sample-ballot">
         <div class="sb-top-box"> 
             <h2>SAMPLE BALLOT</h2>
