--- a/child_pages/cc_elections.html
+++ b/child_pages/cc_elections.html
@@ -32,7 +32,7 @@
         </div>
     </div>
 
-    <div id="jumbotronjawn"></div>
+    <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
 
     <div class="container">
         <h2 class="container-title">Cumberland County Elections</h2>
