--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
         </div>
     </div>
-    <div id="jumbotronjawn"></div>
+    <img src="assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
     <div class="container">
         <div class="logo">
             <img src="assets/INFORM THE.jpg" alt="inform the vote logo" class="logo-img">
