--- a/child_pages/about.html
+++ b/child_pages/about.html
@@ -34,7 +34,7 @@
         </div>
     </div>
 
-    <div id="jumbotronjawn"></div>
+    <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
 
     
     <div class="container">
