--- a/child_pages/cc-elections/cc_election_issues.html
+++ b/child_pages/cc-elections/cc_election_issues.html
@@ -34,7 +34,7 @@
         </div>
     </div>
 
-    <div id="jumbotronjawn"></div>
+    <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
 
     <div class="container">
         <div class="main-content-with-box-shadow-issues">
