--- a/child_pages/cc-elections/cc_election_issues.html
+++ b/child_pages/cc-elections/cc_election_issues.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="menu-wrap">
-        <input type="checkbox" class="toggler">
+        <input type="checkbox" autocomplete='off' class="toggler">
         <div class="hamburger">
             <div></div>
         </div>
