ditch routing page for elections, add issues to burrger menu

--- a/child_pages/cc-elections/Candidates/laspata.html
+++ b/child_pages/cc-elections/Candidates/laspata.html
@@ -20,7 +20,8 @@
                     <div>
                         <ul class="links">
                             <li class="link"><a href="../../../index.html">Home</a></li>
-                            <li class="link"><a href="../../../child_pages/cc_elections.html">Cumberland County Elections</a></li>
+                            <li class="link"><a href="../../../child_pages/cc-elections/cc_election_candidates.html">Cumberland County Elections</a></li>
+                            <li class="link"><a href="../../../child_pages/cc-elections/cc_election_issues.html">Issues</a></li>
                             <li class="link"><a href="../../../child_pages/get-involved.html">Get Involved</a></li>
                             <li class="link"><a href="../../../child_pages/events.html">Events</a></li>
                             <li class="link"><a href="../../../child_pages/about.html">About</a></li>
@@ -48,7 +49,7 @@
         <img class="cover" src="../../../assets/candidates/charles_laspata.jpg" class="candidate-pic">
     </div>
     <div class="candidate-agenda">
-        <h3 class="sub-heading">agenda</h3>
+        <h3 class="sub-heading">campaign website</h3>
             <div class="agenda-thesis">
                Unknown
             </div>
