--- a/child_pages/contact.html
+++ b/child_pages/contact.html
@@ -23,7 +23,8 @@
                 <div>
                     <ul class="links">
                         <li class="link"><a href="../index.html">Home</a></li>
-                        <li class="link"><a href="cc_elections.html">Cumberland County Elections</a></li>
+                        <li class="link"><a href="cc-elections/cc_election_candidates.html">Cumberland County Elections</a></li>
+                        <li class="link"><a href="cc-elections/cc_election_issues.html">Issues</a></li>
                         <li class="link"><a href="get-involved.html">Get Involved</a></li>
                         <li class="link"><a href="events.html">Events</a></li>
                         <li class="link"><a href="about.html">About</a></li>
@@ -38,7 +39,7 @@
 
     <div class="contact">
         <p>
-            For any and all inquiries, reach out to Inform The Vote by <a href="mailto:g@you.suck">email</a>.
+            For any and all inquiries, reach out to Inform The Vote by <a href="mailto:informthevotecc@gmail.com">email</a>.
         </p>
         
     </div>
