--- a/child_pages/cc-elections/Candidates/testa.html
+++ b/child_pages/cc-elections/Candidates/testa.html
@@ -20,7 +20,8 @@
                     <div>
                         <ul class="links">
                             <li class="link"><a href="../../../index.html">Home</a></li>
-                            <li class="link"><a href="../../../child_pages/cc_elections.html">Cumberland County Elections</a></li>
+                            <li class="link"><a href="../../../child_pages/cc-elections/cc_election_candidates.html">Cumberland County Elections</a></li>
+                            <li class="link"><a href="../../../child_pages/cc-elections/cc_election_issues.html">Issues</a></li>
                             <li class="link"><a href="../../../child_pages/get-involved.html">Get Involved</a></li>
                             <li class="link"><a href="../../../child_pages/events.html">Events</a></li>
                             <li class="link"><a href="../../../child_pages/about.html">About</a></li>
