--- a/child_pages/cc-elections/Candidates/taylor.html
+++ b/child_pages/cc-elections/Candidates/taylor.html
@@ -22,6 +22,7 @@
                             <li class="link"><a href="../../../index.html">Home</a></li>
                             <li class="link"><a href="../../../child_pages/cc-elections/cc_election_candidates.html">Cumberland County Elections</a></li>
                             <li class="link"><a href="../../../child_pages/cc-elections/cc_election_issues.html">Issues</a></li>
+                            <li class="link"><a href="../../../child_pages/cc-elections/unanswered_questions.html">Unanswered Questions</a></li>
                             <li class="link"><a href="../../../child_pages/get-involved.html">Get Involved</a></li>
                             <li class="link"><a href="../../../child_pages/events.html">Events</a></li>
                             <li class="link"><a href="../../../child_pages/about.html">About</a></li>
@@ -49,7 +50,11 @@
         <img class="cover" src="../../../assets/candidates/taylor.webp" class="candidate-pic">
     </div>
     <div class="candidate-agenda">
-        <h3 class="sub-heading">agenda</h3>
+        <h4 class="sub-heading">Website</h4>
+        <div class="website">
+            <a href="https://www.ccrrogop.org/cumberlandcountycommissioners" target="_blank" rel="noopener noreferrer" class="website-link">https://www.ccrrogop.org/cumberlandcountycommissioners</a>
+        </div>
+        <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
                 Wants to develop a tourist economy in Cumberland County
             </div>
@@ -62,8 +67,7 @@
             </div>
             <h4 class="sub-heading">POLICY POSITIONS</h4>
             <div class="policy-positions">
-                Inform The Vote has reached out to this candidate through numerous means and have
-                yet to be in contact with them. Visit the  <a href="../../about.html">About page</a> for more information regarding our processes
+                Inform The Vote was able to speak with Taylor at a recent CCRRO Breakfast Meeting.  Sandy discusses that they have the following objectives.  Her daughter  is now a drug rehab nurse. So Sandy has a concern for helping the drug problem in the county (opioids, addiction, etc). She also is concerned about homelessness in the area. She mentioned the homeless people near target, high street and broad Street in millville, downtown Bridgeton, etc. She talked about Money Island Road, which is an important road in the Bayshore area. This road has been affected over the years by climate change and it's current condition impedes the oyster industry, a multimillion dollar industry, from functioning properly. She wants to fix that. She also said that while she wants to help develop the eco-tourism industry in the county, she also wants to make sure that it is done in a way that helps protect the environment.
             </div>
             <h4 class="sub-heading">EXPERIENCE</h4>
             <div class="experience">
