--- a/child_pages/cc-elections/Candidates/acevedo.html
+++ b/child_pages/cc-elections/Candidates/acevedo.html
@@ -22,6 +22,7 @@
                             <li class="link"><a href="../../../index.html">Home</a></li>
                             <li class="link"><a href="../../../child_pages/cc-elections/cc_election_candidates.html">Cumberland County Elections</a></li>
                             <li class="link"><a href="../../../child_pages/cc-elections/cc_election_issues.html">Issues</a></li>
+                            <li class="link"><a href="../../../child_pages/cc-elections/unanswered_questions.html">Unanswered Questions</a></li>
                             <li class="link"><a href="../../../child_pages/get-involved.html">Get Involved</a></li>
                             <li class="link"><a href="../../../child_pages/events.html">Events</a></li>
                             <li class="link"><a href="../../../child_pages/about.html">About</a></li>
@@ -49,6 +50,11 @@
         <img class="cover" src="../../../assets/candidates/acevedo.jpg" class="candidate-pic">
     </div>
     <div class="candidate-agenda">
+        <h4 class="sub-heading">Website</h4>
+        <div class="website">
+            <a href="https://acevedoforsurrogate.com/" target="_blank" rel="noopener noreferrer" class="website-link">https://acevedoforsurrogate.com/</a>
+            <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link">https://cumberlandnjdems.com/elections/our-democratic-candidates/</a>
+        </div>
         <h3 class="sub-heading">agenda</h3>
             <div class="agenda-thesis">
                 Make the Surrogate's Office more efficient and effective by making online forms inter-active.
