--- a/child_pages/cc-elections/Candidates/bonner.html
+++ b/child_pages/cc-elections/Candidates/bonner.html
@@ -22,6 +22,7 @@
                             <li class="link"><a href="../../../index.html">Home</a></li>
                             <li class="link"><a href="../../../child_pages/cc-elections/cc_election_candidates.html">Cumberland County Elections</a></li>
                             <li class="link"><a href="../../../child_pages/cc-elections/cc_election_issues.html">Issues</a></li>
+                            <li class="link"><a href="../../../child_pages/cc-elections/unanswered_questions.html">Unanswered Questions</a></li>
                             <li class="link"><a href="../../../child_pages/get-involved.html">Get Involved</a></li>
                             <li class="link"><a href="../../../child_pages/events.html">Events</a></li>
                             <li class="link"><a href="../../../child_pages/about.html">About</a></li>
@@ -49,7 +50,12 @@
         <img class="cover" src="../../../assets/candidates/eddie_bonner.webp" class="candidate-pic">
     </div>
     <div class="candidate-agenda">
-        <h3 class="sub-heading">agenda</h3>
+        <h4 class="sub-heading">Website</h4>
+        <div class="website">
+            <a href="https://www.cmcdems.com/bonner" target="_blank" rel="noopener noreferrer" class="website-link">https://www.cmcdems.com/bonner</a>
+            <a href="https://www.facebook.com/ld1njvote" target="_blank" rel="noopener noreferrer" class="website-link">https://www.facebook.com/ld1njvote</a>
+        </div>
+        <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
                 Unknown
             </div>
