--- a/child_pages/cc-elections/Candidates/donato.html
+++ b/child_pages/cc-elections/Candidates/donato.html
@@ -22,6 +22,7 @@
                             <li class="link"><a href="../../../index.html">Home</a></li>
                             <li class="link"><a href="../../../child_pages/cc-elections/cc_election_candidates.html">Cumberland County Elections</a></li>
                             <li class="link"><a href="../../../child_pages/cc-elections/cc_election_issues.html">Issues</a></li>
+                            <li class="link"><a href="../../../child_pages/cc-elections/unanswered_questions.html">Unanswered Questions</a></li>
                             <li class="link"><a href="../../../child_pages/get-involved.html">Get Involved</a></li>
                             <li class="link"><a href="../../../child_pages/events.html">Events</a></li>
                             <li class="link"><a href="../../../child_pages/about.html">About</a></li>
@@ -49,7 +50,11 @@
         <img class="cover" src="../../../assets/candidates/donato.webp" class="candidate-pic">
     </div>
     <div class="candidate-agenda">
-        <h3 class="sub-heading">agenda</h3>
+        <h4 class="sub-heading">Website</h4>
+        <div class="website">
+            <a href="https://www.ccrrogop.org/sheriff" target="_blank" rel="noopener noreferrer" class="website-link">https://www.ccrrogop.org/sheriff</a>
+        </div>
+        <h3 class="sub-heading">individual agenda</h3>
             <div class="agenda-thesis">
                 Mr. Donato wants to lead the Sheriff’s Department back to a strong law 
                 enforcement agency, advance partnerships with local and state police departments, 
