--- a/child_pages/cc-elections/Candidates/perella.html
+++ b/child_pages/cc-elections/Candidates/perella.html
@@ -22,6 +22,7 @@
                             <li class="link"><a href="../../../index.html">Home</a></li>
                             <li class="link"><a href="../../../child_pages/cc-elections/cc_election_candidates.html">Cumberland County Elections</a></li>
                             <li class="link"><a href="../../../child_pages/cc-elections/cc_election_issues.html">Issues</a></li>
+                            <li class="link"><a href="../../../child_pages/cc-elections/unanswered_questions.html">Unanswered Questions</a></li>
                             <li class="link"><a href="../../../child_pages/get-involved.html">Get Involved</a></li>
                             <li class="link"><a href="../../../child_pages/events.html">Events</a></li>
                             <li class="link"><a href="../../../child_pages/about.html">About</a></li>
@@ -49,9 +50,14 @@
         <img class="cover" src="../../../assets/candidates/perella.jpg" class="candidate-pic">
     </div>
     <div class="candidate-agenda">
-        <h3 class="sub-heading">agenda</h3>
+        <h4 class="sub-heading">Website</h4>
+        <div class="website">
+            <a href="https://drperellaforcumberland.com/" target="_blank" rel="noopener noreferrer" class="website-link">https://drperellaforcumberland.com/</a>
+            <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link">https://cumberlandnjdems.com/elections/our-democratic-candidates/</a>
+        </div>
+        <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
-                Unknown
+                Seems to be very focused on public water and sewage issues in county. The cost of getting sewage and water up to code for residences and businesses is so high currently that it is preventing new business investment and the sale of residences. Perella is suggesting applying for federal grants to expand water and sewage. It is the opinion of Inform the Vote that this candidate is one of the only candidates in this year's election to clearly explain their action plan for implementing their agenda. Spoke at Deerfield Day and multiple Middle Mile Committee Meetings, in regards to their agenda to expand broadand internet access. Believes that in the year 2023 internet access is integral to the community. While acknowledging that the Middle Mile will not connect the end user, she believes it is an essential first step in the process and proper oversight will be conducted. Also mentioned their commitment to bringing awareness to mental illness, depression, and suicide. Her implementation plan is to get more social workers and counselors into county schools.
             </div>
             <h4 class="sub-heading">party messaging</h4>
             <div class="agenda-per-party-site">
