--- a/child_pages/cc-elections/Candidates/white-morris.html
+++ b/child_pages/cc-elections/Candidates/white-morris.html
@@ -22,6 +22,7 @@
                             <li class="link"><a href="../../../index.html">Home</a></li>
                             <li class="link"><a href="../../../child_pages/cc-elections/cc_election_candidates.html">Cumberland County Elections</a></li>
                             <li class="link"><a href="../../../child_pages/cc-elections/cc_election_issues.html">Issues</a></li>
+                            <li class="link"><a href="../../../child_pages/cc-elections/unanswered_questions.html">Unanswered Questions</a></li>
                             <li class="link"><a href="../../../child_pages/get-involved.html">Get Involved</a></li>
                             <li class="link"><a href="../../../child_pages/events.html">Events</a></li>
                             <li class="link"><a href="../../../child_pages/about.html">About</a></li>
@@ -49,9 +50,21 @@
         <img class="cover" src="../../../assets/candidates/damita_white_morris.webp" class="candidate-pic">
     </div>
     <div class="candidate-agenda">
-        <h3 class="sub-heading">agenda</h3>
+            <h4 class="sub-heading">Website</h4>
+            <div class="website">
+                <a href="https://damitaforassemblynj.com/" target="_blank" rel="noopener noreferrer" class="website-link">https://damitaforassemblynj.com/</a>
+                <a href="https://www.cmcdems.com/whitemorris" target="_blank" rel="noopener noreferrer" class="website-link">https://www.cmcdems.com/whitemorris</a>
+                <a href="https://www.facebook.com/ld1njvote" target="_blank" rel="noopener noreferrer" class="website-link">https://www.facebook.com/ld1njvote</a>
+            </div>
+            <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
-                Unknown,
+                Wants to invest in our youth/education system by through:
+                <ul>
+                    <li>Updating overall infrastructure, dealing with specifics such as providing adequate cooling and heating, removing asbestos, kids having access to sufficient materials</li>
+                    <li>Funding so teachers have adequate teaching supplies</li>
+                    <li>Increase salaries for teachers</li>
+                    <li>School budget oversight</li>
+                </ul>
             </div>
             <h4 class="sub-heading">party messaging</h4>
             <div class="agenda-per-party-site">
