--- a/child_pages/cc-elections/cc_election_issues.html
+++ b/child_pages/cc-elections/cc_election_issues.html
@@ -25,6 +25,7 @@
                         <li class="link"><a href="../../index.html">Home</a></li>
                         <li class="link"><a href="../cc-elections/cc_election_candidates.html">Cumberland County Elections</a></li>
                         <li class="link"><a href="../cc-elections/cc_election_issues.html">Issues</a></li>
+                        <li class="link"><a href="../cc-elections/unanswered_questions.html">Unanswered Questions</a></li>
                         <li class="link"><a href="../get-involved.html">Get Involved</a></li>
                         <li class="link"><a href="../events.html">Events</a></li>
                         <li class="link"><a href="../about.html">About</a></li>
