--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                         <li class="link"><a id="home" href="index.html">Home</a></li>
                         <li class="link"><a href="child_pages/cc-elections/cc_election_candidates.html">Cumberland County Elections</a></li>
                         <li class="link"><a href="child_pages/cc-elections/cc_election_issues.html">Issues</a></li>
+                        <li class="link"><a href="child_pages/cc-elections/unanswered_questions.html">Unanswered Questions</a></li>
                         <li class="link"><a href="child_pages/get-involved.html">Get Involved</a></li>
                         <li class="link"><a href="child_pages/events.html">Events</a></li>
                         <li class="link"><a href="child_pages/about.html">About</a></li>
